--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Timetracker</title>
+<title>Timetracker Chart Report</title>
 ## Style Declaration
 <style type="text/css">
 .button {
