--- a/src/main/resources/templates/error.vm
+++ b/src/main/resources/templates/error.vm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Timetracker</title>
+<title>Timetracker Error Page</title>
 </head>
 <body>
 <p>This is the Jira Timetracker Plugin Error Page.</p>
