--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -145,7 +145,7 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 	#set($rendererType = "atlassian-wiki-renderer")
 	<div id="plugin_head" class="item-header" style="width:980px;">
 			<div style="float: right;">
-				<a href="http://www.everit.org/components.html#jira" target="_blank">
+				<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
 					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
 				</a>
 			</div>
