Fixed Chart report bug when a user was renamed in JIRA.

--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -184,7 +184,7 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 								<option selected="selected"
 								  		data-field-text="$userPickerObject.getDisplayName()"
 								  		style="background-image:url('$avatarURL')" 
-								  		value="$userPickerObject.getName()">
+								  		value="$userPickerObject.getKey()">
 								  	$userPickerObject.getDisplayName()
 								 </option>
 							 #end
