fixed bug when db shema name returned emtpy string style fixes

--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -47,7 +47,7 @@
 }
 
 .item-header {
-	margin: 12px 12px 0 12px;
+padding: 12px 12px 0 16px !important;
 	min-height: 48px;
 	position: relative;
 	padding-left: 5px;
