--- a/src/main/resources/templates/adminsettings.vm
+++ b/src/main/resources/templates/adminsettings.vm
@@ -34,7 +34,7 @@
 		border-radius: .4em;
 	}
     .item-header {
-		margin: 12px 12px 0 12px;
+    	padding: 12px 12px 0 16px !important;
 		min-height: 48px;
 		position: relative;
 		padding-left: 5px;
