--- a/src/main/resources/templates/settings.vm
+++ b/src/main/resources/templates/settings.vm
@@ -35,7 +35,7 @@
 		border-radius: .4em;
 	}
     .item-header {
-		margin: 12px 12px 0 12px;
+    padding: 12px 12px 0 16px !important;
 		min-height: 48px;
 		position: relative;
 		padding-left: 5px;
