JIRAPLUGIN-23 bug fixed. 1.3 version. In "Edit" mode if there was an invalid save action, the plugin changed to "Add worklog" mode, now it stays in "Edit". Added table row coloring in edit mode.

--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -13,6 +13,9 @@
     .rowAlter {
         background-color:#F2F2F2;
     }
+    .rowEdit {
+        background-color:#FFEAAE;
+    }
     .button {
         padding: 2px;
     }
@@ -692,6 +695,7 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 		 	var temp = new String(AJS.$(this).find('a').html());
 		 	AJS.$('#issueSelect-textarea').val(temp.trim());
 		 	AJS.$('#issueSelect-textarea').focus();
+		 	AJS.$('#Edit').focus();
 		 	AJS.$('#Submit').focus();
 		 });
 		 
