--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -113,7 +113,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 					<script>
 						var cal = Calendar
 								.setup({
-									firstDay : $fdow,
+									firstDay : $currentCalendar.firstDayOfWeek -1,
 									inputField : 'dateFrom',
 									button : 'date_trigger_from',
 									date : '$dateFromFormated',
@@ -140,7 +140,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	              <script>
 							var cal = Calendar
 									.setup({
-										firstDay : $fdow,
+										firstDay : $currentCalendar.firstDayOfWeek -1,
 										inputField : 'dateTo',
 										button : 'date_trigger_to',
 										date : '$dateToFormated',
