fixed fdow setting ui improvements

--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -44,6 +44,11 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 <body>
 <form name="chartReportForm"  method="get" action="JiraTimetrackerChartWebAction.jspa" />   
 	#set($rendererType = "atlassian-wiki-renderer")
+	#if($currentCalendar.useISO8601 == true)
+		#set ($firstDay = 1)
+	#else
+		#set ($firstDay = 0)
+	#end
 	<div id="plugin_head" class="item-header" style="width:980px;">
 			<div style="float: right;">
 				<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
@@ -90,10 +95,10 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 									}
 						          </script>
 								<img id="date_trigger_from" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0"
-									alt="Pick a date"/>
+									alt="Pick a date" style="vertical-align: sub;"/>
 								<script>
 								var cal= Calendar.setup({
-									firstDay : $currentCalendar.firstDayOfWeek -1,
+									firstDay : $firstDay,
 									inputField : 'dateFrom',
 									button : 'date_trigger_from',
 									date : '$dateFromFormated',
@@ -122,10 +127,10 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 									}
 						          </script>
 								<img id="date_trigger_to" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0"
-									alt="Pick a date"/>
+									alt="Pick a date" style="vertical-align: sub;"/>
 								<script>
 								var cal= Calendar.setup({
-									firstDay : $currentCalendar.firstDayOfWeek -1,
+									firstDay : $firstDay,
 									inputField : 'dateTo',
 									button : 'date_trigger_to',
 									date : '$dateToFormated',
