--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -75,6 +75,11 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 
 <form name="myForm" method="post"action="JiraTimetrackerWorklogsWebAction.jspa?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated&actualPage=$actualPage" />
 	#set($rendererType = "atlassian-wiki-renderer")
+	#if($currentCalendar.useISO8601 == true)
+		#set ($firstDay = 1)
+	#else
+		#set ($firstDay = 0)
+	#end
 	<div id="plugin_head" class="item-header" style="width: 980px;">
 	  <div style="float: right;">
 	    <a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank"> <img
@@ -109,11 +114,11 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 						}
 					}
 					</script> 
-					<img id="date_trigger_from" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" /> 
+					<img id="date_trigger_from" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" style="vertical-align: sub;"/> 
 					<script>
 						var cal = Calendar
 								.setup({
-									firstDay : $currentCalendar.firstDayOfWeek -1,
+									firstDay : $firstDay,
 									inputField : 'dateFrom',
 									button : 'date_trigger_from',
 									date : '$dateFormated',
@@ -136,11 +141,11 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 							}
 						}
 				</script> 
-				<img id="date_trigger_to" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" /> 
+				<img id="date_trigger_to" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" style="vertical-align: sub;"/> 
 	              <script>
 							var cal = Calendar
 									.setup({
-										firstDay : $currentCalendar.firstDayOfWeek -1,
+										firstDay : $firstDay,
 										inputField : 'dateTo',
 										button : 'date_trigger_to',
 										date : '$dateToFormated',
