localized button titles

--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -114,7 +114,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 						}
 					}
 					</script> 
-					<img id="date_trigger_from" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" style="vertical-align: sub;"/> 
+					<img id="date_trigger_from" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" style="vertical-align: sub;" title="$i18n.getText('plugin.choose.date')"/> 
 					<script>
 						var cal = Calendar
 								.setup({
@@ -141,7 +141,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 							}
 						}
 				</script> 
-				<img id="date_trigger_to" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" style="vertical-align: sub;"/> 
+				<img id="date_trigger_to" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" style="vertical-align: sub;" title="$i18n.getText('plugin.choose.date')"/> 
 	              <script>
 							var cal = Calendar
 									.setup({
